# spiritual-director-chat

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  main.py  plan.md  pyproject.toml
.github/: dependabot.yml
docs/: blog-tech.md
imitatio-christi/: book-four-chapter-01-the-great-reverence-with-which-we-should-receive-christ.md  book-four-chapter-02-god-s-great-goodness-and-love-is-shown-to-man-in-this-sacram.md  book-four-chapter-03-it-is-profitable-to-receive-communion-often.md  book-four-chapter-04-many-blessings-are-given-those-who-receive-communion-worthil.md  book-four-chapter-05-the-dignity-of-the-sacrament-and-of-the-priesthood.md  book-four-chapter-06-an-inquiry-on-the-proper-thing-to-do-before-communion.md  book-four-chapter-07-the-examination-of-conscience-and-the-resolution-to-amend.md  book-four-chapter-08-the-offering-of-christ-on-the-cross-our-offering.md  book-four-chapter-09-we-should-offer-ourselves-and-all-that-we-have-to-god-prayin.md  book-four-chapter-10-do-not-lightly-forego-holy-communion.md  book-four-chapter-11-the-body-of-christ-and-sacred-scripture-are-most-necessary-t.md  book-four-chapter-12-the-communicant-should-prepare-himself-for-christ-with-great.md  book-four-chapter-13-with-all-her-heart-the-devout-soul-should-desire-union-with.md  book-four-chapter-14-the-ardent-longing-of-devout-men-for-the-body-of-christ.md  book-four-chapter-15-the-grace-of-devotion-is-acquired-through-humility-and-self.md  book-one-chapter-01-imitating-christ-and-despising-all-vanities-on-earth.md  (+100 more)
(+67 files in other folders)
